<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="surakshaError">Suraksha</string>

    <string name="toolbar_title">Outdoor data</string>


    //Connection Screen
    <string name="empty"> </string>
    <string name="connection_screen_connected_title">Connected</string>
    <string name="connection_screen_connected_description">You are connected to the internet.</string>

    <string name="connection_screen_disconnected_title">Unable to connect</string>
    <string name="connection_screen_disconnected_description">An internal connection cannot be made.</string>

    <string name="connection_screen_button">Fetch data</string>


    //Fetch Data Screen
    <string name="fetch_data_screen_data_retrieved_title">Data collected</string>
    <string name="fetch_data_screen_data_retrieved_description">The weather data has been successfully collected.</string>

    <string name="fetch_data_screen_data_unsuccessful_title">Unable to collect data</string>
    <string name="fetch_data_screen_data_unsuccessful_description">The data could not be collected.</string>

    <string name="fetch_data_screen_button">View results</string>
    <string name="notification_channel_id">suraksha</string>
    <string name="invalid_user_name">Invalid username</string>


    //Login Screen
    <string name="login_with_google">Login With Google</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="not_a_member">Note a Member?</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up2"><u>Sign Up</u></string>
    <string name="sign_in2">Sign In</string>
    <string name="email_or_ph">Email Id/No</string>

    //SignUp Screen
    <string name="sign_up">SIGN UP</string>
    <string name="alredy_have_account">Already have an account?</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="submit">Submit</string>
    <string name="or">Or</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="sign_up_with_facebook">Sign Up With Facebook</string>
    <string name="user_name">User Name</string>
    <string name="phone_no">Phone No</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>

    //mobile verification screen
    <string name="mobile_no_verification">Mobile Number Verification</string>
    <string name="enter_verification_code_send_to">Please enter the verification code sent to</string>
    <string name="your_ph_no">your mobile number</string>
    <string name="didnt_receive_otp">Didn\'t receive OTP?</string>
    <string name="resend"><u>Resend</u></string>

    //email verification screen
    <string name="email_verification">Email Verification</string>
    <string name="your_email_id">your email id</string>

    //forgot password screen
    <string name="generate_otp">Generate OTP</string>
    <string name="forgot_password2">Forgot Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //dashboard
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="ambulance">Ambulance</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="lab">Lab</string>
    <string name="doctor">Doctor</string>
    <string name="op">Op</string>
    <string name="home_care">Home\nCare</string>
    <string name="ardram_care">Ardram\nCare</string>
    <string name="palliative_care">Palliative\nCare</string>
    <string name="companion_care">Companion\nCare</string>

    //see all
    <string name="seeall">See all</string>


    //lab
    <string name="near_by">Near by</string>


    //hamberger menu
    
    <string name="medicine_orders">Medicine Orders </string>
    <string name="test_results">Test Results</string>
    <string name="equipment_rent">Equipment Rent</string>
    <string name="appoinments">Appoinments</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Invalid password</string>
    <string name="something_wrong">Something went wrong...</string>
    <string name="tests">Tests</string>
    <string name="please_wait">Please wait...</string>
    <string name="test_name">Test Name</string>
    <string name="duration">Duration</string>
    <string name="desc">Description</string>
    <string name="price">Price</string>
    <string name="prescription_required">Prescription Required</string>
    <string name="collection_center">Collection Center</string>
    <string name="confidentiality">Confidentiality</string>
    <string name="department">Department</string>
    <string name="test_code">Test Code</string>
    <string name="description">Description</string>
    <string name="create_test">Create Test</string>
    <string name="edit_test">Edit Test</string>
    <string name="bookings">Bookings</string>
    <string name="time_slot">Time Slot</string>
    <string name="slot_1">Slot 1</string>
    <string name="no_of_bookings">No of bookings</string>
    <string name="slot_2">Slot 2</string>
    <string name="slot_3">Slot 3</string>
    <string name="booking_id">Booking Id :</string>
    <string name="patient_name">Patient Name :</string>
    <string name="log_out">Logout</string>
    <string name="medicines">Medicines</string>
    <string name="medicine_id">Medicine Id :</string>
    <string name="medicine_name">Medicine Name :</string>
    <string name="prescription">Prescription</string>
    <string name="medical_composition">Medical Composition</string>


</resources>
