<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home"
            android:title="@string/home" />
    </group>

    <group
        android:id="@+id/grp_2"
        android:checkableBehavior="single">

        <item
            android:id="@id/fragment_chat"
            android:icon="@drawable/group_1_"
            android:title="@string/location"/>
        <item
            android:id="@id/fragment_settings"
            android:icon="@drawable/vector_4_"
            android:title="@string/ambulance"/>
    </group>


    <group
        android:id="@+id/grp_5"
        android:checkableBehavior="single">
        <item
            android:id="@id/fragment_profile"
            android:icon="@drawable/user"
            android:title="@string/profile"/>
    </group>

</menu>