<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.suraksha.android.view_model.UserViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/app_bar">
                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/materialToolbar"
                    style="@style/toolbar_style"
                    >

                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittext1"
                style="@style/text_inputLayout"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/user_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:startIconDrawable="@drawable/user">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text"
                    android:textColorHint="@color/text_black_5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittext2"
                style="@style/text_inputLayout"
                android:hint="@string/phone_no"
                app:layout_constraintEnd_toEndOf="@+id/edittext1"
                app:layout_constraintStart_toStartOf="@+id/edittext1"
                app:layout_constraintTop_toBottomOf="@+id/edittext1"
                app:startIconDrawable="@drawable/carbon_phone"
               >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittext3"
                style="@style/text_inputLayout"
                android:hint="@string/email_id"
                app:layout_constraintEnd_toEndOf="@+id/edittext2"
                app:layout_constraintStart_toStartOf="@+id/edittext2"
                app:layout_constraintTop_toBottomOf="@+id/edittext2"
                app:startIconDrawable="@drawable/eva_email_outline"
               >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittext7"
                style="@style/text_inputLayout"
                android:hint="@string/address"
                app:layout_constraintEnd_toEndOf="@+id/edittext3"
                app:layout_constraintStart_toStartOf="@+id/edittext3"
                app:layout_constraintTop_toBottomOf="@+id/edittext3"
                app:startIconDrawable="@drawable/email_at"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittext8"
                style="@style/text_inputLayout"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="@+id/edittext7"
                app:layout_constraintStart_toStartOf="@+id/edittext7"
                app:layout_constraintTop_toBottomOf="@+id/edittext7"
                app:startIconDrawable="@drawable/lock"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittext6"
                style="@style/text_inputLayout"
                android:hint="@string/confirm_password"
                app:layout_constraintEnd_toEndOf="@+id/edittext8"
                app:layout_constraintStart_toStartOf="@+id/edittext8"
                app:layout_constraintTop_toBottomOf="@+id/edittext8"
                app:startIconDrawable="@drawable/lock"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="129dp"
                android:layout_marginTop="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_bar"
                app:srcCompat="@drawable/image_removebg_preview__3__1_1_" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:background="@color/color_drawer"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/edittext6"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:background="@color/color_drawer"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="@+id/edittext6"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/or"
                android:textColor="@color/text_black_5"
                app:layout_constraintEnd_toEndOf="@+id/button"
                app:layout_constraintStart_toStartOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <Button
                android:id="@+id/outlinedButton"
                style="@style/button2"
                android:text="@string/sign_up_with_facebook"
                android:textColor="@color/text_black_5"
                app:icon="@drawable/facebook_logo"
                app:layout_constraintEnd_toEndOf="@+id/outlinedButton2"
                app:layout_constraintStart_toStartOf="@+id/outlinedButton2"
                app:layout_constraintTop_toBottomOf="@+id/outlinedButton2"
                android:onClick="@{()-> viewModel.doFacebookSignup()}"/>

            <Button
                android:id="@+id/outlinedButton2"
                style="@style/button2"
                android:text="@string/sign_up_with_google"
                android:textColor="@color/text_black_5"
                app:icon="@drawable/ic_flat_color_icons_google"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:onClick="@{()-> viewModel.doGoogleSignUp()}"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/alredy_have_account"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/outlinedButton"
                app:layout_constraintTop_toBottomOf="@+id/outlinedButton" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/sign_in"
                android:textColor="@color/red"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                android:onClick="@{()-> viewModel.doSignInClick()}"/>

            <Button
                android:id="@+id/button"
                style="@style/submit_button"
                android:layout_marginTop="45dp"
                android:onClick="@{()-> viewModel.doSignUp()}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="@+id/edittext6"
                app:layout_constraintHorizontal_bias="0.458"
                app:layout_constraintStart_toStartOf="@+id/edittext6"
                app:layout_constraintTop_toBottomOf="@+id/edittext6" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>